--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -16,8 +18,170 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+} */
+
+
+
+.flexCenter { @apply flex flex-row justify-center items-center};
+.flexAround { @apply flex flex-row justify-around items-center};
+.flexBetween { @apply flex flex-row justify-between items-center};
+.flexStart { @apply flex flex-row justify-start items-center};
+.flexEnd { @apply flex flex-row justify-end items-center};
+
+.flexColCenter { @apply flex flex-col justify-center items-center};
+.flexColAround { @apply flex flex-col justify-around items-center};
+.flexColBetween { @apply flex flex-col justify-between items-center};
+.flexColStart { @apply flex flex-col justify-start items-center};
+.flexColEnd { @apply flex flex-col justify-end items-center};
+
+.flexCenterStart { @apply flex flex-row justify-center items-start }
+.flexStartStart { @apply flex flex-row justify-start items-start }
+.flexStartCenter { @apply flex flex-row justify-start items-center }
+.flexCenterEnd { @apply flex flex-row justify-center items-end }
+.flexEndEnd { @apply flex flex-row justify-end items-end }
+.flexEndCenter { @apply flex flex-row justify-end items-center }
+.flexStartEnd { @apply flex flex-row justify-start items-end }
+.flexEndStart { @apply flex flex-row justify-end items-start }
+
+.flexColCenterStart { @apply flex flex-col justify-center items-start }
+.flexColStartStart { @apply flex flex-col justify-start items-start }
+.flexColStartCenter { @apply flex flex-col justify-start items-center }
+.flexColCenterEnd { @apply flex flex-col justify-center items-end }
+.flexColEndEnd { @apply flex flex-col justify-end items-end }
+.flexColEndCenter { @apply flex flex-col justify-end items-center }
+.flexColStartEnd { @apply flex flex-col justify-start items-end }
+.flexColEndStart { @apply flex flex-col justify-end items-start }
+
+.flexAroundStart { @apply flex flex-row justify-around items-start};
+
+
+
+
+.title-text-shadow1{
+  /* color: #270404; */
+  /* text-shadow: #270404; */
+  text-shadow: 0 0 3px #270404;
 }
 
+.title-text-shadow2{
+  text-shadow: 0 0 4px #d3e0d3;
+}
+
+.title-text-shadow3{
+  text-shadow: 0 0 5px #e2eee2;
+}
+
+.title-text-shadow4{
+  text-shadow: 0 0 1px #0db915;
+}
+
+.title-text-shadow5{
+  text-shadow: 0 0 10px #270404;
+}
+
+.title-text-shadow6{
+  text-shadow: 0 0 2px #fff;
+}
+
+.title-text-no-shadow{
+  text-shadow: 0 0 0 #cfe4cf;
+}
+
+.color-sampling-css {
+  color: #613207;
+}
+
+.bg-hero {
+  background-image: url("./assets/bg1.jpg");
+}
+
+.bg-hero1 {
+  background-image: url("./assets/BG-3.jpg");
+}
+
+.bg-offers {
+  background-image: url("./assets/Offers_BG.jpg");
+}
+
+.text-contrast-css {
+  color: transparent; /* Make the original text color transparent */
+  -webkit-background-clip: text; /* Apply background to text */
+  background-clip: text;
+  -webkit-text-stroke: 0px white; /* Add a stroke to improve readability */
+}
+
+.text-on-background {
+  color: #fff;
+  filter: drop-shadow(4px 4px 18px rgba(0, 0, 0, 0.9));
+}
+
+.button-gradient1 {
+  background: linear-gradient(90deg, "#0db915", #064709);
+}
+
+/* .text1-gradient1 {
+  background: linear-gradient(90deg, "#0db915", #064709);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+} */
+
+.button-shadow1 {
+  --tw-shadow: 1px 2px 1px 2px rgb(0 0 0 / 0.5);
+  box-shadow: var(--tw-shadow);
+}
+
+.color {
+  color: #146409;
+  color: #0b1f139c;
+  color: #d5ebde;
+}
+
+.blur-effect1 {
+  filter: blur(2px);
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: scale(0.9); }
+  to { opacity: 1; transform: scale(1); }
+}
+
+.fadeInAnimate {
+  animation: fadeIn 0.5s ease;
+}
+
+.fadeInAnimate1 {
+  animation: fadeIn 1s ease;
+}
+
+.fadeOut {
+  opacity: 0;
+}
+
+.fadeIn {
+  opacity: 1;
+}
+
+@keyframes spin {
+  to {
+      transform: rotate(360deg);
+  }
+}
+.animate-spin {
+  animation: spin 1s linear infinite;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* 
 a {
   font-weight: 500;
   color: #646cff;
@@ -57,7 +221,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 /* @media (prefers-color-scheme: light) {
   :root {
