--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
+@import "tailwindcss";
 
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 
 /* :root {
@@ -20,19 +21,33 @@
   -moz-osx-font-smoothing: grayscale;
 } */
 
+:root {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  margin: 0;
+  padding: 0;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 
-.flexCenter { @apply flex flex-row justify-center items-center};
-.flexAround { @apply flex flex-row justify-around items-center};
-.flexBetween { @apply flex flex-row justify-between items-center};
-.flexStart { @apply flex flex-row justify-start items-center};
-.flexEnd { @apply flex flex-row justify-end items-center};
 
-.flexColCenter { @apply flex flex-col justify-center items-center};
-.flexColAround { @apply flex flex-col justify-around items-center};
-.flexColBetween { @apply flex flex-col justify-between items-center};
-.flexColStart { @apply flex flex-col justify-start items-center};
-.flexColEnd { @apply flex flex-col justify-end items-center};
+.flexCenter { @apply flex flex-row justify-center items-center; }
+.flexAround { @apply flex flex-row justify-around items-center; }
+.flexBetween { @apply flex flex-row justify-between items-center; }
+.flexStart { @apply flex flex-row justify-start items-center; }
+.flexEnd { @apply flex flex-row justify-end items-center; }
+
+.flexColCenter { @apply flex flex-col justify-center items-center; }
+.flexColAround { @apply flex flex-col justify-around items-center; }
+.flexColBetween { @apply flex flex-col justify-between items-center; }
+.flexColStart { @apply flex flex-col justify-start items-center; }
+.flexColEnd { @apply flex flex-col justify-end items-center; }
 
 .flexCenterStart { @apply flex flex-row justify-center items-start }
 .flexStartStart { @apply flex flex-row justify-start items-start }
@@ -52,7 +67,7 @@
 .flexColStartEnd { @apply flex flex-col justify-start items-end }
 .flexColEndStart { @apply flex flex-col justify-end items-start }
 
-.flexAroundStart { @apply flex flex-row justify-around items-start};
+.flexAroundStart { @apply flex flex-row justify-around items-start; }
 
 
 
@@ -167,71 +182,21 @@
       transform: rotate(360deg);
   }
 }
-.animate-spin {
-  animation: spin 1s linear infinite;
+.animate-spin1 {
+  animation: spin 8s linear infinite;
 }
 
-
-
-
-
-
-
-
-
-
-
-/* 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.animate-spin2 {
+  animation: spin 0.5s linear infinite;
 }
 
-body {
-  margin: 0;
+.flex-center {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.coloe {
+  color: #0000005d
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
-
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
