--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,28 @@
   animation: fadeOut 1s ease;
 }
 
+
+.pulseBorder { 
+  animation: pulse-border 2s infinite 
+}
+
+.pulseBorder1 { 
+  animation: pulse-border1 .8s infinite 
+}
+
+@keyframes pulse-border {
+  0% { box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.5) }
+  70% { box-shadow: 0 0 0 10px rgba(255, 255, 255, 0) }
+  100% { box-shadow: 0 0 0 0 rgba(255, 255, 255, 0) }
+}
+
+@keyframes pulse-border1 {
+  0% { box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7) }
+  70% { box-shadow: 0 0 0 10px rgba(255, 255, 255, 0) }
+  100% { box-shadow: 0 0 0 0 rgba(255, 255, 255, 0) }
+}
+
+
 .fadeOut {
   opacity: 0;
 }
